style: improved responsiveness

--- a/pages/login.html
+++ b/pages/login.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Games Cart</title>
     <meta name="author" content="Rohit Prasad" />
-    <meta name="description" content="homepage" />
+    <meta name="description" content="Login" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://particle-ui.netlify.app/main.css" />
-    <link rel="stylesheet" href="./login.css" />
+    <link rel="stylesheet" href="../style/authentication.css" />
+    <link rel="stylesheet" href="../style/home.css" />
   </head>
 
   <body>
@@ -20,7 +21,9 @@
             <input type="text" class="search" placeholder="🔍 Search" />
           </li>
           <li class="navbar__list__items">
-            <button class="btn btn__secondary">Login</button>
+            <button class="btn btn__secondary">
+              <a href="./login.html">Login</a>
+            </button>
           </li>
 
           <li class="navbar__list__items">
