--- a/pages/register.html
+++ b/pages/register.html
@@ -21,9 +21,11 @@
             <input type="text" class="search" placeholder="🔍 Search" />
           </li>
           <li class="navbar__list__items">
-            <button class="btn btn__secondary">
-              <a href="./login.html">Login</a>
-            </button>
+            <a href="./login.html">
+              <button class="btn btn__secondary">
+                Login
+              </button>
+            </a>
           </li>
 
           <li class="navbar__list__items">
