fix: added link to cart

--- a/pages/products.html
+++ b/pages/products.html
@@ -46,8 +46,10 @@
                 </li>
                 <li class="navbar__list__items">
                     <span class="badge__icons">
-                        <i class="fa-solid fa-cart-shopping icon"></i>
-                        <span class="badge__number badge__primary">5</span>
+                        <a href="./cart.html">
+                            <i class="fa-solid fa-cart-shopping icon"></i>
+                            <span class="badge__number badge__primary">5</span>
+                    </a>
                     </span>
                 </li>
             </ul>
