refactor: used better alt for card image

--- a/pages/products.html
+++ b/pages/products.html
@@ -128,7 +128,7 @@
                         <i class="far fa-heart"></i>
                     </span>
                     <span class="card__image">
-                        <img src="../assets/image.jpg" alt="card Image" />
+                        <img src="../assets/image.jpg" alt="Product Image" />
                     </span>
                     <div class="card__footer">
                         <span class="card__title">Super Mario</span>
@@ -147,7 +147,7 @@
                         <i class="fas fa-heart text__pink"></i>
                     </span>
                     <span class="card__image">
-                        <img src="../assets/image.jpg" alt="card Image" />
+                        <img src="../assets/image.jpg" alt="Product Image" />
                     </span>
                     <div class="card__footer">
                         <span class="card__title">Super Mario</span>
@@ -166,7 +166,7 @@
                         <i class="far fa-heart"></i>
                     </span>
                     <span class="card__image">
-                        <img src="../assets/image.jpg" alt="card Image" />
+                        <img src="../assets/image.jpg" alt="Product Image" />
                     </span>
                     <div class="card__footer">
                         <span class="card__title">Super Mario</span>
@@ -185,7 +185,7 @@
                         <i class="far fa-heart"></i>
                     </span>
                     <span class="card__image">
-                        <img src="../assets/image.jpg" alt="card Image" />
+                        <img src="../assets/image.jpg" alt="Product Image" />
                     </span>
                     <div class="card__footer">
                         <span class="card__title">Super Mario</span>
@@ -204,7 +204,7 @@
                         <i class="far fa-heart"></i>
                     </span>
                     <span class="card__image">
-                        <img src="../assets/image.jpg" alt="card Image" />
+                        <img src="../assets/image.jpg" alt="Product Image" />
                     </span>
                     <div class="card__footer">
                         <span class="card__title">Super Mario</span>
@@ -223,7 +223,7 @@
                         <i class="far fa-heart"></i>
                     </span>
                     <span class="card__image">
-                        <img src="../assets/image.jpg" alt="card Image" />
+                        <img src="../assets/image.jpg" alt="Product Image" />
                     </span>
                     <div class="card__footer">
                         <span class="card__title">Super Mario</span>
@@ -242,7 +242,7 @@
                         <i class="far fa-heart"></i>
                     </span>
                     <span class="card__image">
-                        <img src="../assets/image.jpg" alt="card Image" />
+                        <img src="../assets/image.jpg" alt="Product Image" />
                     </span>
                     <div class="card__footer">
                         <span class="card__title">Super Mario</span>
@@ -261,7 +261,7 @@
                         <i class="far fa-heart"></i>
                     </span>
                     <span class="card__image">
-                        <img src="../assets/image.jpg" alt="card Image" />
+                        <img src="../assets/image.jpg" alt="Product Image" />
                     </span>
                     <div class="card__footer">
                         <span class="card__title">Super Mario</span>
