fix: homepage link added to cart header

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -17,7 +17,9 @@
 <body>
     <div class="home__container">
         <nav class="navbar simple">
-            <h3 class="navbar__header">Games-Cart</h3>
+            <a href="./index.html">
+                <h3 class="navbar__header">Games-Cart</h3>
+            </a>
             <ul class="navbar__list">
                 <li class="navbar__list__items">
                     <input type="text" class="search" placeholder="  🔍Search" />
