fix: added correct links to navbar

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -17,7 +17,7 @@
 <body>
     <div class="home__container">
         <nav class="navbar simple">
-            <a href="./index.html">
+            <a href="../index.html">
                 <h3 class="navbar__header">Games-Cart</h3>
             </a>
             <ul class="navbar__list">
