--- a/pages/login.html
+++ b/pages/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Games Cart</title>
@@ -10,76 +11,69 @@
     <link rel="stylesheet" href="https://particle-ui.netlify.app/main.css" />
     <link rel="stylesheet" href="../style/authentication.css" />
     <link rel="stylesheet" href="../style/home.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="home__container">
-      <nav class="navbar simple">
-        <h3 class="navbar__header">Games-Cart</h3>
-        <ul class="navbar__list">
-          <li class="navbar__list__items">
-            <input type="text" class="search" placeholder="🔍 Search" />
-          </li>
-          <li class="navbar__list__items">
-            <a href="./login.html">
-              <button class="btn btn__secondary">
-                Login
-              </button>
+        <nav class="navbar simple">
+            <a href="../index.html">
+                <h3 class="navbar__header">Games-Cart</h3>
             </a>
-          </li>
+            <ul class="navbar__list">
+                <li class="navbar__list__items">
+                    <input type="text" class="search" placeholder="  🔍Search" />
+                </li>
+                <li class="navbar__list__items">
+                    <a href="./login.html">
+                        <button class="btn btn__secondary">Login</button>
+                    </a>
+                </li>
 
-          <li class="navbar__list__items">
-            <span class="badge__icons">
-              <i class="fa-regular fa-heart icon"></i>
-              <span class="badge__number badge__primary">5</span>
-            </span>
-          </li>
-          <li class="navbar__list__items">
-            <span class="badge__icons">
-              <i class="fa-solid fa-cart-shopping icon"></i>
-              <span class="badge__number badge__primary">5</span>
-            </span>
-          </li>
-        </ul>
-      </nav>
+                <li class="navbar__list__items">
+                    <span class="badge__icons">
+              <a href="./wishlist.html">
+                <i class="fa-regular fa-heart icon"></i>
+                <span class="badge__number badge__primary"> 5 </span>
+                    </a>
+                    </span>
+                </li>
+                <li class="navbar__list__items">
+                    <span class="badge__icons">
+              <a href="./cart.html">
+                <i class="fa-solid fa-cart-shopping icon"></i>
+                <span class="badge__number badge__primary">5</span>
+                    </a>
+                    </span>
+                </li>
+            </ul>
+        </nav>
 
-      <div class="main__container">
-        <div class="form__group">
-          <h4>Login</h4>
-          <label for="username">Email</label>
-          <input
-            type="text"
-            id="username"
-            name="username"
-            placeholder="Enter your email"
-            class="form__group__input"
-          />
-          <label for="password">Password</label>
-          <input
-            type="password"
-            id="password"
-            name="password"
-            placeholder="Enter your password"
-            class="form__group__input"
-          />
-          <div class="form__bottom">
-            <label class="text__md">
+        <div class="main__container">
+            <div class="form__group">
+                <h4>Login</h4>
+                <label for="username">Email</label>
+                <input type="text" id="username" name="username" placeholder="Enter your email" class="form__group__input" />
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" placeholder="Enter your password" class="form__group__input" />
+                <div class="form__bottom">
+                    <label class="text__md">
               <input type="checkbox" />
               Remember me
             </label>
-            <span class="forgot__password text__bold text__md">
+                    <span class="forgot__password text__bold text__md">
               Forgot your password?
             </span>
-          </div>
-          <button class="btn btn__primary login">
+                </div>
+                <button class="btn btn__primary login">
             <i class="fas fa-sign-in-alt login__icon"></i>
             Login
           </button>
-          <div class="register text__center">
-            <a href="./register.html">Create a new account ></a>
-          </div>
+                <div class="register text__center">
+                    <a href="./register.html">Create a new account ></a>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </body>
+</body>
+
 </html>
