--- a/pages/register.html
+++ b/pages/register.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Games Cart</title>
@@ -10,44 +11,50 @@
     <link rel="stylesheet" href="https://particle-ui.netlify.app/main.css" />
     <link rel="stylesheet" href="../style/authentication.css" />
     <link rel="stylesheet" href="../style/home.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="home__container">
-      <nav class="navbar simple">
-        <h3 class="navbar__header">Games-Cart</h3>
-        <ul class="navbar__list">
-          <li class="navbar__list__items">
-            <input type="text" class="search" placeholder="🔍 Search" />
-          </li>
-          <li class="navbar__list__items">
-            <a href="./login.html">
-              <button class="btn btn__secondary">
-                Login
-              </button>
+        <nav class="navbar simple">
+            <a href="../index.html">
+                <h3 class="navbar__header">Games-Cart</h3>
             </a>
-          </li>
+            <ul class="navbar__list">
+                <li class="navbar__list__items">
+                    <input type="text" class="search" placeholder="  🔍Search" />
+                </li>
+                <li class="navbar__list__items">
+                    <a href="./login.html">
+                        <button class="btn btn__secondary">
+                            Login
+                        </button>
+                    </a>
+                </li>
 
-          <li class="navbar__list__items">
-            <span class="badge__icons">
-              <i class="fa-regular fa-heart icon"></i>
-              <span class="badge__number badge__primary">5</span>
-            </span>
-          </li>
-          <li class="navbar__list__items">
-            <span class="badge__icons">
-              <i class="fa-solid fa-cart-shopping icon"></i>
-              <span class="badge__number badge__primary">5</span>
-            </span>
-          </li>
-        </ul>
-      </nav>
+                <li class="navbar__list__items">
+                    <a href="./wishlist.html">
+                        <span class="badge__icons">
+                            <i class="fa-regular fa-heart icon"></i>
+                            <span class="badge__number badge__primary">5</span>
+                        </span>
+                    </a>
+                </li>
+                <li class="navbar__list__items">
+                    <a href="./cart.html">
+                        <span class="badge__icons">
+                            <i class="fa-solid fa-cart-shopping icon"></i>
+                            <span class="badge__number badge__primary">5</span>
+                    </a>
+                    </span>
+                </li>
+            </ul>
+        </nav>
 
-      <div class="main__container">
-        <div class="form__group">
-          <h4>Sign up</h4>
-          <div class="form__name">
-            <label for="first__name">
+        <div class="main__container">
+            <div class="form__group">
+                <h4>Sign up</h4>
+                <div class="form__name">
+                    <label for="first__name">
               First Name
               <input
                 type="text"
@@ -57,7 +64,7 @@
                 class="form__group__input"
               />
             </label>
-            <label for="last__name">
+                    <label for="last__name">
               Last Name
               <input
                 type="text"
@@ -67,8 +74,8 @@
                 class="form__group__input"
               />
             </label>
-          </div>
-          <label for="username">
+                </div>
+                <label for="username">
             Email
             <input
               type="text"
@@ -78,7 +85,7 @@
               class="form__group__input"
             />
           </label>
-          <label for="password">
+                <label for="password">
             Password
             <input
               type="password"
@@ -88,20 +95,21 @@
               class="form__group__input"
             />
           </label>
-          <div class="form__bottom">
-            <label class="text__md">
+                <div class="form__bottom">
+                    <label class="text__md">
               <input type="checkbox" />
               I accept all terms & conditions
             </label>
-          </div>
-          <button class="btn btn__primary login">
+                </div>
+                <button class="btn btn__primary login">
             Create a new Account
           </button>
-          <div class="register text__center">
-            <a href="./login.html">Already have an account ></a>
-          </div>
+                <div class="register text__center">
+                    <a href="./login.html">Already have an account ></a>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </body>
+</body>
+
 </html>
