--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Games Cart</title>
+    <title>Games Cart | wishlist</title>
     <meta name="author" content="Rohit Prasad" />
     <meta name="description" content="Wishlist" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,123 +12,126 @@
     <link rel="stylesheet" href="../style/authentication.css" />
     <link rel="stylesheet" href="https://particle-ui.netlify.app/main.css" />
     <link rel="stylesheet" href="../style/home.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="home__container">
-      <nav class="navbar simple">
-        <h3 class="navbar__header">Games-Cart</h3>
-        <ul class="navbar__list">
-          <li class="navbar__list__items">
-            <input type="text" class="search" placeholder="🔍 Search" />
-          </li>
-          <li class="navbar__list__items">
-            <a href="./login.html">
-              <button class="btn btn__secondary">
-                Login
-              </button>
+        <nav class="navbar simple">
+            <a href="../index.html">
+                <h3 class="navbar__header">Games-Cart</h3>
             </a>
-          </li>
+            <ul class="navbar__list">
+                <li class="navbar__list__items">
+                    <input type="text" class="search" placeholder="  🔍Search" />
+                </li>
+                <li class="navbar__list__items">
+                    <a href="./login.html">
+                        <button class="btn btn__secondary">Login</button>
+                    </a>
+                </li>
 
-          <li class="navbar__list__items">
-            <span class="badge__icons">
+                <li class="navbar__list__items">
+                    <span class="badge__icons">
               <a href="./wishlist.html">
                 <i class="fa-regular fa-heart icon"></i>
+                <span class="badge__number badge__primary"> 5 </span>
+                    </a>
+                    </span>
+                </li>
+                <li class="navbar__list__items">
+                    <span class="badge__icons">
+              <a href="./cart.html">
+                <i class="fa-solid fa-cart-shopping icon"></i>
                 <span class="badge__number badge__primary">5</span>
-              </a>
-            </span>
-          </li>
-          <li class="navbar__list__items">
-            <span class="badge__icons">
-              <i class="fa-solid fa-cart-shopping icon"></i>
-              <span class="badge__number badge__primary">5</span>
-            </span>
-          </li>
-        </ul>
-      </nav>
+                    </a>
+                    </span>
+                </li>
+            </ul>
+        </nav>
 
-      <div class="main__container">
-        <h3 class="text__center font__regular">My Wishlist</h3>
+        <div class="main__container">
+            <h3 class="text__center font__regular">My Wishlist</h3>
 
-        <div class="wishlist">
-          <div class="card card__shadow">
-            <span class="card__icon right">
+            <div class="wishlist">
+                <div class="card card__shadow">
+                    <span class="card__icon right">
               <i class="fas fa-heart heart"></i>
             </span>
-            <span class="card__image">
+                    <span class="card__image">
               <img src="../assets/image.jpg" alt="card Image" />
             </span>
-            <div class="card__footer">
-              <span class="card__title">Super Mario</span>
-              <span class="card__details">
+                    <div class="card__footer">
+                        <span class="card__title">Super Mario</span>
+                        <span class="card__details">
                 <span class="card__details__price__new">₹2999</span>
-                <span class="card__details__price__old">₹3999</span>
-                <span class="card__details__discount">25% off</span>
-              </span>
-              <div class="card__buttons">
-                <button class="btn btn__primary">Move to Cart</button>
-              </div>
-            </div>
-          </div>
-          <div class="card card__shadow">
-            <span class="card__icon right">
+                        <span class="card__details__price__old">₹3999</span>
+                        <span class="card__details__discount">25% off</span>
+                        </span>
+                        <div class="card__buttons">
+                            <button class="btn btn__primary">Move to Cart</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card__shadow">
+                    <span class="card__icon right">
               <i class="fas fa-heart heart"></i>
             </span>
-            <span class="card__image">
+                    <span class="card__image">
               <img src="../assets/image.jpg" alt="card Image" />
             </span>
-            <div class="card__footer">
-              <span class="card__title">Super Mario</span>
-              <span class="card__details">
+                    <div class="card__footer">
+                        <span class="card__title">Super Mario</span>
+                        <span class="card__details">
                 <span class="card__details__price__new">₹2999</span>
-                <span class="card__details__price__old">₹3999</span>
-                <span class="card__details__discount">25% off</span>
-              </span>
-              <div class="card__buttons">
-                <button class="btn btn__primary">Move to Cart</button>
-              </div>
-            </div>
-          </div>
-          <div class="card card__shadow">
-            <span class="card__icon right">
+                        <span class="card__details__price__old">₹3999</span>
+                        <span class="card__details__discount">25% off</span>
+                        </span>
+                        <div class="card__buttons">
+                            <button class="btn btn__primary">Move to Cart</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card__shadow">
+                    <span class="card__icon right">
               <i class="fas fa-heart heart"></i>
             </span>
-            <span class="card__image">
+                    <span class="card__image">
               <img src="../assets/image.jpg" alt="card Image" />
             </span>
-            <div class="card__footer">
-              <span class="card__title">Super Mario</span>
-              <span class="card__details">
+                    <div class="card__footer">
+                        <span class="card__title">Super Mario</span>
+                        <span class="card__details">
                 <span class="card__details__price__new">₹2999</span>
-                <span class="card__details__price__old">₹3999</span>
-                <span class="card__details__discount">25% off</span>
-              </span>
-              <div class="card__buttons">
-                <button class="btn btn__primary">Move to Cart</button>
-              </div>
-            </div>
-          </div>
-          <div class="card card__shadow">
-            <span class="card__icon right">
+                        <span class="card__details__price__old">₹3999</span>
+                        <span class="card__details__discount">25% off</span>
+                        </span>
+                        <div class="card__buttons">
+                            <button class="btn btn__primary">Move to Cart</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card__shadow">
+                    <span class="card__icon right">
               <i class="fas fa-heart heart"></i>
             </span>
-            <span class="card__image">
+                    <span class="card__image">
               <img src="../assets/image.jpg" alt="card Image" />
             </span>
-            <div class="card__footer">
-              <span class="card__title">Super Mario</span>
-              <span class="card__details">
+                    <div class="card__footer">
+                        <span class="card__title">Super Mario</span>
+                        <span class="card__details">
                 <span class="card__details__price__new">₹2999</span>
-                <span class="card__details__price__old">₹3999</span>
-                <span class="card__details__discount">25% off</span>
-              </span>
-              <div class="card__buttons">
-                <button class="btn btn__primary">Move to Cart</button>
-              </div>
+                        <span class="card__details__price__old">₹3999</span>
+                        <span class="card__details__discount">25% off</span>
+                        </span>
+                        <div class="card__buttons">
+                            <button class="btn btn__primary">Move to Cart</button>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </body>
+</body>
+
 </html>
